--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
+    "ethers": "https://esm.sh/ethers@^6.16.0",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "ethers": "https://esm.sh/ethers@^6.16.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
