--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BaseMarkets</title>
+    <!-- BaseMarkets Logo Favicon: Blue circle, White chart line, Gold star. Encoded with %22 for compatibility. -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='45' fill='%230052ff' /%3E%3Cpath d='M20 70 L 40 50 L 55 65 L 80 30' stroke='white' stroke-width='8' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M80 30 L 85 15 M 80 30 L 95 30 M 80 30 L 65 30 M 80 30 L 75 45' stroke='%23F8B229' stroke-width='4' stroke-linecap='round' /%3E%3Ccircle cx='40' cy='50' r='4' fill='%23D42426' /%3E%3Ccircle cx='55' cy='65' r='4' fill='%23146B3A' /%3E%3C/svg%3E">
+    <link rel="shortcut icon" href="data:image/svg+xml,%3Csvg viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='45' fill='%230052ff' /%3E%3Cpath d='M20 70 L 40 50 L 55 65 L 80 30' stroke='white' stroke-width='8' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M80 30 L 85 15 M 80 30 L 95 30 M 80 30 L 65 30 M 80 30 L 75 45' stroke='%23F8B229' stroke-width='4' stroke-linecap='round' /%3E%3Ccircle cx='40' cy='50' r='4' fill='%23D42426' /%3E%3Ccircle cx='55' cy='65' r='4' fill='%23146B3A' /%3E%3C/svg%3E">
   <script type="importmap">
 {
   "imports": {
