--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="vi" class="dark">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BaseMarkets | Dự đoán & Kiếm tiền</title>
+    <title>BaseMarkets | Decentralized Prediction Market</title>
     
     <!-- Farcaster Frame v2 Metadata -->
-    <meta property="fc:frame" content='{"version":"next","imageUrl":"https://base-markets.vercel.app/og-image.png","button":{"title":"Mở App","action":{"type":"launch_app","name":"BaseMarkets","url":"https://base-markets.vercel.app/","splashImageUrl":"https://base-markets.vercel.app/splash.png","splashBackgroundColor":"#0052ff"}}}' />
+    <meta property="fc:frame" content='{"version":"next","imageUrl":"https://base-markets.vercel.app/og-image.png","button":{"title":"Launch App","action":{"type":"launch_app","name":"BaseMarkets","url":"https://base-markets.vercel.app/","splashImageUrl":"https://base-markets.vercel.app/splash.png","splashBackgroundColor":"#0052ff"}}}' />
     
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='45' fill='%230052ff' /%3E%3Cpath d='M25 65 L 45 45 L 55 55 L 75 30' stroke='white' stroke-width='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
     <style>
@@ -19,11 +19,11 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "ethers": "https://esm.sh/ethers@^6.16.0"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
+    "ethers": "https://esm.sh/ethers@^6.16.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
